# Edge-Computing

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  pi.sample.yaml  pi.yaml  windows-video.sample.yaml  windows-webcam.yaml
evidence/: PASO_DIAGNOSTIC_20260329T051145Z.md  samples.csv  samples.jsonl  summary.json  summary.md
scripts/: compare_benchmarks.py  export_onnx.py  paso_benchmark.py  quantize_onnx.py
src/entrance_monitor/: __init__.py  api.py  camera.py  config.py  detector.py  main.py  mmwave.py  models.py  service.py  storage.py  tracking.py  utils.py
src/entrance_monitor/web/static/: app.css  app.js
src/entrance_monitor/web/templates/: debug.html  index.html  settings.html  validation.html
tests/: paso_diagnostic.py  test_api.py  test_camera_video.py  test_detector.py  test_paso_benchmark.py  test_service_logic.py  test_storage.py  test_tracking.py
